# phase

./: Cargo.toml  README.md  index.html
src/: main.rs  routes.rs
src/kanban/: board.rs
src/main_content/: main_content.rs  mod.rs
src/navbar/: navbar.rs
src/sidebar/: sidebar.rs
static/assets/: base.scss  kanban.scss  main_content.scss  navbar.scss  sidebar.scss
