[package]
name = "phase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
console_error_panic_hook = "0.1.7"
console_log = "0.2.0"
sycamore = { git = "https://github.com/sycamore-rs/sycamore", rev = "0512e4a6e7e60b6f2611c6984585c90126b69018" }