[package]
name = "phase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
console_error_panic_hook = "0.1.7"
console_log = "0.2.0"
sycamore = { version = "0.8.2", features = ["suspense"] }
sycamore-router = "0.8"